force-app/main/default/objects/ToDoItem__c/ToDoItem__c.object-meta.xml
<CustomObject>
    <label>To-Do Item</label>
    <nameField>
        <label>To-Do</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>To-Do Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>