force-app/main/default/objects/ToDoItem__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for assigning the user who performed the task.</description>
    <inlineHelpText>Field for assigning the user who performed the task.</inlineHelpText>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ToDoItems</relationshipName>
    <type>Lookup</type>
</CustomField>