force-app/main/default/objects/ToDoItem__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Task end date.</description>
    <inlineHelpText>Task end date.</inlineHelpText>
    <label>End date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>