force-app/main/default/objects/ToDoItem__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>Related milestone.</description>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipName>MilestoneTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>