force-app/main/default/objects/ToDoItem__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Task start date.</description>
    <inlineHelpText>Task start date.</inlineHelpText>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>