force-app/main/default/objects/ToDoItem__c/validationRules/Required_todo_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_todo_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please fill in the To-Do field.</errorMessage>
</ValidationRule>